--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --button-color: #bcb8b1;
   --font-color: #000000;
   --bg-color: #0200d0;
+  --red-color: #800000;
 }
 
 body {
@@ -108,6 +109,7 @@ input {
   padding-left: 15px;
   color: var(--font-color);
   background: var(--button-color);
+  z-index: 1;
 }
 
 .actions {
@@ -147,6 +149,61 @@ input {
   color: var(--font-color);
 }
 
+.putSomething {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  width: 200px;
+  height: 110px;
+  background: var(--input-color);
+  z-index: 99;
+  border: 1px solid var(--border-color);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.put {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.blue-line {
+  height: 25px;
+  background: var(--bg-color);
+}
+
+.error {
+  padding-left: 5px;
+  color: var(--input-color);
+}
+
+.ok_btn {
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 70px;
+  font-size: 16px;
+  font-weight: 400;
+  border: 1px solid #000000;
+  color: var(--font-color);
+  cursor: pointer;
+  background: var(--button-color);
+  padding: 0px 15px;
+  transition: ease-out 0.3s;
+}
+
+.ok_btn:hover {
+  transition: ease-in 0.3s;
+  background-color: #dbd8d3;
+}
+/* check */
+.checkbox {
+  width: 20px;
+  height: 20px;
+  float: right;
+  cursor: pointer;
+}
+
 @media (max-width: 1024px) {
   .container {
     max-width: none;
@@ -182,7 +239,7 @@ input {
     overflow: hidden;
   }
 
-   .text {
+  .text {
     width: 350px;
   }
 
